...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/back_button_holder"
        app:layout_constraintTop_toTopOf="@+id/back_button_holder"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

    <Button
        android:id="@+id/button_event"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        android:text="Event"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/button_profiles"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button_holder" />

    <Button
        android:id="@+id/button_profiles"
...
        android:insetBottom="0dp"
        android:padding="0dp"
        android:text="Profiles"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/button_images"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_event"
        app:layout_constraintTop_toBottomOf="@+id/back_button_holder" />

    <Button
        android:id="@+id/button_images"
...
        android:padding="0dp"
        android:text="Images"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_logs"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_profiles"
        app:layout_constraintTop_toBottomOf="@+id/back_button_holder" />

    <Button
        android:id="@+id/button_logs"
...
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_all_profiles"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/click_event_events"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_all_events"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/click_event_posters"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_event_posters"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_event"
        tools:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_notification_logs"
            android:layout_width="0dp"
            android:layout_height="765dp"
            android:paddingTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
