<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightestBlue"
    tools:context=".EditProfileActivity">

    <View
        android:id="@+id/top_status_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/darkestBlue"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/back_button_holder"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/darkestBlue"
        app:layout_constraintTop_toBottomOf="@id/top_status_bar" />

    <ImageView
        android:id="@+id/button_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/back_button_holder"
        app:layout_constraintEnd_toEndOf="@+id/back_button_holder"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/back_button_holder"
        app:layout_constraintTop_toTopOf="@+id/back_button_holder"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginTop="7dp"
        android:adjustViewBounds="false"
        android:background="@drawable/circular_profile"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button_holder"
        app:layout_constraintVertical_bias="0.132"
        app:srcCompat="@drawable/outline_person_24" />

    <EditText
        android:id="@+id/input_firstname"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/rounded_light_blue_input_shape"
        android:hint="First Name"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:textColor="@color/darkestBlue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_profile" />

    <EditText
        android:id="@+id/input_lastname"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_light_blue_input_shape"
        android:hint="Last Name"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:textColor="@color/darkestBlue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/input_firstname"
        app:layout_constraintStart_toStartOf="@+id/input_firstname"
        app:layout_constraintTop_toBottomOf="@+id/input_firstname" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_light_blue_input_shape"
        android:hint="Email"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:textColor="@color/darkestBlue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/input_firstname"
        app:layout_constraintStart_toStartOf="@+id/input_firstname"
        app:layout_constraintTop_toBottomOf="@+id/input_lastname" />

    <EditText
        android:id="@+id/input_phonenumber"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_light_blue_input_shape"
        android:hint="@string/optional_phone_number"
        android:inputType="number"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/input_firstname"
        app:layout_constraintStart_toStartOf="@+id/input_firstname"
        app:layout_constraintTop_toBottomOf="@+id/input_email" />

    <Button
        android:id="@+id/button_save_changes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/darkerBlue"
        android:stateListAnimator="@null"
        android:text="Save Changes"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/input_firstname"
        app:layout_constraintStart_toStartOf="@+id/input_firstname"
        app:layout_constraintTop_toBottomOf="@+id/button_remove_phonenumber" />

    <Button
        android:id="@+id/button_remove_phonenumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue"
        android:stateListAnimator="@null"
        android:text="Remove Phone Number"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/input_firstname"
        app:layout_constraintStart_toStartOf="@+id/input_firstname"
        app:layout_constraintTop_toBottomOf="@+id/input_phonenumber" />
</androidx.constraintlayout.widget.ConstraintLayout>