...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/back_button_holder"
        app:layout_constraintTop_toTopOf="@+id/back_button_holder"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/event_details_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="32dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_event"
        tools:visibility="gone">


        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
...
            android:padding="5dp"
            android:text="Event Start Time"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/darkestBlue"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/text_event_name"
            app:layout_constraintStart_toStartOf="@+id/text_event_name"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/text_event_registration_start"
            android:layout_width="0dp"
...
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/text_event_name"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/text_event_capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_light_blue_input_shape"
            android:minWidth="35dp"
            android:padding="5dp"
            android:text="-"
...
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="@+id/text_event_name"
            app:layout_constraintTop_toTopOf="@+id/textView9" />

        <TextView
            android:id="@+id/text_entrant_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_light_blue_input_shape"
            android:minWidth="35dp"
            android:padding="5dp"
            android:text="-"
...
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="@+id/text_event_name"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/rounded_dark_teal"
            android:button="@drawable/empty_check"
            android:clickable="false"
            android:foreground="@drawable/checkbox_icon"
...
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toBottomOf="@+id/view2">

            <TextView
                android:id="@+id/text_event_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_bottom_light_blue_input_shape"
                android:padding="8dp"
                android:text="You have no event description."
                android:textColor="@color/darkestBlue"
...
                android:layout_height="match_parent"
                android:background="@drawable/rounded_bottom_light_blue_input_shape"
                android:visibility="gone"
                tools:visibility="gone" />

            <TextView
                android:id="@+id/text_event_guidelines"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rounded_bottom_light_blue_input_shape"
                android:padding="8dp"
                android:text="You have no event guidelines."
...
            app:layout_constraintTop_toTopOf="@+id/button_edit_event"
            app:srcCompat="@drawable/outline_qr_code_scanner_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/event_entrants_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_entrants"
        tools:visibility="gone">

        <Button
            android:id="@+id/button_send_notification"
            android:layout_width="0dp"
            android:layout_height="0dp"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_entrant_location" />

        <TextView
            android:id="@+id/text_no_entrants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your event currently has no entrants."
            android:textColor="@color/darkerBlue"
            android:textSize="20sp"
            android:visibility="gone"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/system_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/sample_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/darkerBlue"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="Sample Until Capacity is Reached"
...
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="Entrants"
        android:textColor="@color/darkestBlueNotSelected"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/button_system"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_event"
        app:layout_constraintTop_toBottomOf="@+id/back_button_holder" />

    <Button
        android:id="@+id/button_system"
...
